--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dune-platform",
+  "name": "dune-gql",
   "version": "1.0.0",
-  "description": "Web application to showcase how to integrate React, Node.js and Express. Full explanation and guide available on Medium.",
+  "description": "Fullstack template: Node.js, Express, JWT Authorization, React, Redux Toolkit, TypeScript and GraphQL support with Apollo Server.",
   "main": "server/index.js",
   "engines": {
     "node": "^14"
@@ -20,11 +20,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^3.6.4",
     "cors": "^2.8.5",
     "cross-fetch": "^3.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
